--- a/ben_1.html
+++ b/ben_1.html
@@ -49,8 +49,9 @@
 
   <div class="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/yourhandle">@yourhandle</a></p>
+    <p>Email: <a href="ben.winkler.callenberg@web.com">ben.winkler.callenberg@web.com</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/bn.wnklr/">@bn.wnklre</a></p>
   </div>
 </body>
 </html>
+
