--- a/ben_1.html
+++ b/ben_1.html
@@ -42,9 +42,7 @@
   <p>Welcome to my gallery! Here are some of my artworks:</p>
   
   <div class="gallery">
-    <img src="art1.jpg" alt="Artwork 1">
-    <img src="art2.jpg" alt="Artwork 2">
-    <img src="art3.jpg" alt="Artwork 3">
+    <img src="test.png" alt="Artwork 1">
   </div>
 
   <div class="contact">
@@ -54,4 +52,5 @@
   </div>
 </body>
 </html>
+
 
