--- a/ben_1.html
+++ b/ben_1.html
@@ -2,25 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Art Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fdfdfd;
+      background-color: #fdfdfd;
       margin: 0;
       padding: 20px;
       text-align: center;
     }
+
     h1 {
       color: #333;
+      margin-bottom: 10px;
     }
+
+    p {
+      color: #555;
+      margin-top: 0;
+    }
+
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
+      margin-top: 30px;
     }
+
     .gallery img {
       width: 250px;
       height: auto;
@@ -28,21 +38,34 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       transition: transform 0.2s;
     }
+
     .gallery img:hover {
       transform: scale(1.05);
     }
+
     .contact {
-      margin-top: 40px;
+      margin-top: 50px;
       font-size: 18px;
+      color: #333;
+    }
+
+    .contact a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <h1>My Art Portfolio</h1>
   <p>Welcome to my gallery! Here are some of my artworks:</p>
-  
+
   <div class="gallery">
-    <img src="test.png" alt="Artwork 1">
+    <!-- Replace these with your own image files -->
+    <img src="https://via.placeholder.com/250x250.png?text=Artwork+1" alt="Artwork 1">
   </div>
 
   <div class="contact">
@@ -52,5 +75,7 @@
   </div>
 </body>
 </html>
+
+
 
 
