--- a/ben_1.html
+++ b/ben_1.html
@@ -4,74 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Art Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fdfdfd;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      color: #333;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #555;
-      margin-top: 0;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .gallery img {
-      width: 250px;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      transition: transform 0.2s;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
-    .contact {
-      margin-top: 50px;
-      font-size: 18px;
-      color: #333;
-    }
-
-    .contact a {
-      color: #1a73e8;
-      text-decoration: none;
-    }
-
-    .contact a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <h1>My Art Portfolio</h1>
-  <p>Welcome to my gallery! Here are some of my artworks:</p>
-
-  <div class="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="ben.winkler.callenberg@web.com">ben.winkler.callenberg@web.com</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/bn.wnklr/">@bn.wnklre</a></p>
-  </div>
+  <p>If you can see this, GitHub Pages is working!</p>
 </body>
 </html>
-
-
-
-
-
