--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Art Portfolio</title>
+    <title>Ben Winkler</title>
     <style>
         body {
             font-family: 'Helvetica', sans-serif;
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Name</h1>
+        <h1>Ben Winkler</h1>
 
         <nav>
             <a href="#" onclick="showWorks()">Works</a>
