--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
         <!-- Home/Slideshow Section -->
         <div id="home" class="slideshow">
-            <img src="turkis-quest.jpg" class="slide active" alt="Turkis Quest painting">
-            <img src="pioneers-algae.jpg" class="slide" alt="Pioneers and Algae">
+            <img src="ben1.jpg" class="slide active" alt="Turkis Quest painting">
+            <img src="ben2.jpg" class="slide" alt="Pioneers and Algae">
             <!-- Add more slides as needed -->
             <div class="slide-info">
                 <span id="slide-title">Turkis Quest painting</span>
@@ -175,14 +175,14 @@
                     <span class="work-title">Turkis Quest painting</span>
                     <span class="work-year">2014</span>
                 </div>
-                <img src="turkis-quest.jpg" alt="Turkis Quest painting" class="work-image">
+                <img src="ben1.jpg" alt="Turkis Quest painting" class="work-image">
             </div>
             <div class="work-item">
                 <div class="work-text">
                     <span class="work-title">Pioneers and Algae</span>
                     <span class="work-year">2014</span>
                 </div>
-                <img src="pioneers-algae.jpg" alt="Pioneers and Algae" class="work-image">
+                <img src="ben2.jpg" alt="Pioneers and Algae" class="work-image">
             </div>
             <!-- Add more works as needed -->
         </div>
