--- a/impressum.html
+++ b/impressum.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Impressum</title>
-</head>
-<body>
-    <h1>Impressum</h1>
-    <p>Your legal details here...</p>
-</body>
-</html>
+<div id="impressum" class="impressum">
+    <h2>Impressum</h2>
+    <p>
+        <strong>Ben Winkler</strong><br>
+        Address (if desired)<br>
+        Email: <a href="mailto:jo.huschenbett@gmail.com">jo.huschenbett@gmail.com</a>
+    </p>
+    <p>
+        <strong>Privacy Policy:</strong><br>
+        This website does not collect personal data.
+    </p>
+    <a href="#" onclick="showHome()" class="back-link">← Back to Home</a>
+</div>
